--- a/src/client/src/index.css
+++ b/src/client/src/index.css
@@ -60,5 +60,10 @@ body {
 }
 
 #description{
-  background: linear-gradient(60deg, rgba(26, 28, 31, 0.5), rgba(26, 28, 31, 0.9)),url(https://images.unsplash.com/photo-1451187580459-43490279c0fa?q=80&w=2372&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+  background: linear-gradient(60deg, rgba(26, 28, 31, 0.5), rgba(26, 28, 31, 0.9)), url(https://images.unsplash.com/photo-1451187580459-43490279c0fa?q=80&w=2372&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+}
+
+.container-content{
+  min-height: 100vh;
+  background: linear-gradient(60deg, rgba(26, 28, 31, 0.5), rgba(26, 28, 31, 0.8)), url(https://images.unsplash.com/photo-1653163061406-730a0df077eb?q=80&w=2496&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
 }
